What's new...

Mar 7/2017 : JF 15.0.0 released!
  - jfProjector/0.1
    - new app to projector your desktop to another desktop
  - ffmpeg : downloading on Windows can now goto %appdata% folder (no longer need admin access)
  - re-release ffmpeg based apps:
    - jfAudio/0.15
    - jfMedia/0.11
    - jfMusic/0.4
    - jfRecordCamera/0.4
    - jfRecordDesktop/0.5
    - jfVideo/0.19
    - jPhoneLite/1.11

Feb 22/2017 : JF 14.3.0 released!
  - javaforce.controls.Tag now supports sharing a tcp connection
  - jfDataLogger/0.8
  - jfDataLoggerPlus/0.4

Feb 20/2017 : JF 14.2.0 released!
  - jfDataLoggerPlus : minor DB change

Feb 17/2017 : JF 14.1.0 released!
  - javaforce.controls now supports AB INT data type (java:short 16bits)
  - new javaforce.controls.Tag to be shared between controls apps
  - jfDataLogger/0.7 and jfDataLoggerPlus/0.2 released

Feb 16/2017 : JF 14.0.0 released!
  - new app : jfDataLoggerPlus
    - this is an app that logs changes to PLC tags similar to jfDataLogger but this is a service for long term data collection
    - data is collected into an SQL database
    - first app to use the new WebUI which is still a work in progress
  - this is the 13th major release of JavaForce ;)

Nov 22/2016 : JF 12.5.0 released!
  - jfDataLogger/0.6
    - minor fixes

Oct 28/2016 : JF 12.4.0 released!
  - fixed NI-DAQmx freq counter logic
  - jfDataLogger/0.5
    - many fixes

Oct 25/2016 : JF 12.3.0 released!
  - fixed NI-DAQmx counter and digital inputs
  - jfDataLogger/0.4
    - improved fault tolerance

Oct 24/2016 : JF 12.2.0 released!
  - added support for National Instruments DAQmx controller
    - javaforce.controls.ni
  - jfDataLogger/0.3
    - support for NI
    - multi-threaded for better performance
  - more webui improvements

Oct 18/2016 : JF 12.1.0 released!
  - fix : s7 tags were limited to block number 127
  - jfDataLogger/0.2
  - forget to mention new support for using GPIO pins on Raspberry Pi
    - see javaforce/pi/Test