@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Wix xmlns="http://schemas.microsoft.com/wix/2006/wi">
-  <Product Id="*" UpgradeCode="{429E2AD1-232C-4C24-9C78-8D06E506505A}" Version="0.8" Language="1033" Name="jfDataLogger" Manufacturer="Peter Quiring">
+  <Product Id="*" UpgradeCode="{429E2AD1-232C-4C24-9C78-8D06E506505A}" Version="0.9" Language="1033" Name="jfDataLogger" Manufacturer="Peter Quiring">
     <Package InstallerVersion="300" Compressed="yes" InstallScope="perMachine"/>
     <Media Id="1" Cabinet="files.cab" EmbedCab="yes" />
     <UIRef Id="WixUI_Minimal" />
