@@ -8,7 +8,7 @@
   <property name="src" location="src"/>
   <property name="build" location="classes"/>
   <property name="classpath" location="javaforce.jar"/>
-  <property name="version" value="0.4"/>
+  <property name="version" value="0.5"/>
 
   <import file="../../base.xml"/>
 
